--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,9 +13,8 @@
 	<script src="lib/angular/angular-route.js"></script>
 	<script src="js/app.js"></script>
     <script src="js/map.js"></script>
+    <script src="js/loading.js"></script>
 	<script src="js/controllers.js"></script>
-	<script src="../../../bower_components/ngmap/build/scripts/ng-map.js"></script>
-    <script src="bower_components/ngmap/build/scripts/ng-map.js"></script>
 	<script src="https://rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.js"></script>
 	<script src="https://maps.google.com/maps/api/js?key=AIzaSyDrXw9BwblAbmcwuljHC-4hhzDvyiW3xsE&libraries=placeses,visualization,drawing,geometry,places"></script>
 
@@ -23,31 +22,7 @@
 
 </head>
 <body>
-<!--
-    <div id="loading" class="loading-screen">
-        <div class="loading-content">
-            <img src="images/ohcrap.png">
-            <br>
-            <p class="loading-text">oh crap!</p>
-            <div class="loader">
-                <svg version="1.1" id="loader-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-             width="40px" height="40px" viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve">
-                  <path fill="#000" d="M43.935,25.145c0-10.318-8.364-18.683-18.683-18.683c-10.318,0-18.683,8.365-18.683,18.683h4.068c0-8.071,6.543-14.615,14.615-14.615c8.072,0,14.615,6.543,14.615,14.615H43.935z">
-                    <animateTransform attributeType="xml"
-                      attributeName="transform"
-                      type="rotate"
-                      from="0 25 25"
-                      to="360 25 25"
-                      dur="0.6s"
-                      repeatCount="indefinite"/>
-                    </path>
-                </svg>
-            </div>
-        </div>
-    </div>
-    -->
-
-	<div class="height100" id="page" ng-view></div>
+	<div class="height100" id="page" ng-view ng-cloak></div>
 </body>
 </html>
 
