--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,10 +13,12 @@
 	<script src="lib/angular/angular-route.js"></script>
 	<script src="js/app.js"></script>
     <script src="js/map.js"></script>
-    <script src="js/loading.js"></script>
+    <!--<script src="js/loading.js"></script>-->
 	<script src="js/controllers.js"></script>
 	<script src="https://rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.js"></script>
 	<script src="https://maps.google.com/maps/api/js?key=AIzaSyDrXw9BwblAbmcwuljHC-4hhzDvyiW3xsE&libraries=placeses,visualization,drawing,geometry,places"></script>
+
+
 
 </head>
 <body>
