--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,19 +9,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/app.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script src="lib/angular/angular.js"></script>
 	<script src="lib/angular/angular-route.js"></script>
 	<script src="js/app.js"></script>
     <script src="js/map.js"></script>
-    <!--<script src="js/loading.js"></script>-->
+    <script src="js/loading.js"></script>
 	<script src="js/controllers.js"></script>
 	<script src="https://rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.js"></script>
 	<script src="https://maps.google.com/maps/api/js?key=AIzaSyDrXw9BwblAbmcwuljHC-4hhzDvyiW3xsE&libraries=placeses,visualization,drawing,geometry,places"></script>
 
 
 
+
 </head>
 <body>
+	<div id="loading" class="loading-screen">
+		<div class="loading-content">
+			<div id="loading-wrapper">
+				<div id="loading-text">LOADING</div>
+				<div id="loading-content"></div>
+			</div>
+		</div>
+	</div>
 	<div class="height100" id="page" ng-view ng-cloak></div>
 </body>
 </html>
