--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="addressbookApp">
+<html lang="en" ng-app="addressbookApp" xmlns="http://www.w3.org/1999/html">
 <head>
 	<meta charset="utf-8">
 	<title>Address Book</title>
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/app.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/signup.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script src="lib/angular/angular.js"></script>
 	<script src="lib/angular/angular-route.js"></script>
@@ -16,6 +17,7 @@
     <script src="js/map.js"></script>
     <script src="js/loading.js"></script>
 	<script src="js/controllers.js"></script>
+	<script src="js/signup.js"></script>
 	<script src="https://rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.js"></script>
 	<script src="https://maps.google.com/maps/api/js?key=AIzaSyDrXw9BwblAbmcwuljHC-4hhzDvyiW3xsE&libraries=placeses,visualization,drawing,geometry,places"></script>
 
