--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,6 +18,11 @@
     <script src="js/map.js"></script>
     <script src="js/loading.js"></script>
 	<script src="js/controllers.js"></script>
+	<script src="js/addLocationController.js"></script>
+	<script src="js/createAccountController.js"></script>
+	<script src="js/homeController.js"></script>
+	<script src="js/loginController.js"></script>
+	<script src="js/rateController.js"></script>
 	<script data-require="ui-bootstrap@*" data-semver="0.10.0" src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.10.0.js"></script>
 	<script src="https://rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.js"></script>
 	<script src="https://maps.google.com/maps/api/js?key=AIzaSyDrXw9BwblAbmcwuljHC-4hhzDvyiW3xsE&libraries=placeses,visualization,drawing,geometry,places"></script>
