--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="addressbookApp" xmlns="http://www.w3.org/1999/html">
+<html lang="en" ng-app="ohCrapApp" xmlns="http://www.w3.org/1999/html">
 <head>
 	<meta charset="utf-8">
 	<title>Address Book</title>
